<resources>
    <string name="app_name">Job2NSDA</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="full_name">Full Name</string>
    <string name="logout">Logout</string>
</resources>